# ynvo

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
django_verifactu/: admin.py  apps.py  managers.py  models.py  test_managers.py  test_models.py  urls.py  views.py
django_verifactu/migrations/: 0001_initial.py
docker/: entrypoint
invoices/: asgi.py  local_settings.py  settings.py  urls.py  urls_local.py  wsgi.py
verifactu/: README.md  aeat_client.py  constants.py  hash.py  qr.py  test_aeat_client.py  test_hash.py  test_qr.py  test_xml_builder.py  xml_builder.py
verifactu/schemas/: SuministroInformacion.xsd
ynvo/: admin.py  apps.py  choices.py  factories.py  filters.py  forms.py  managers.py  models.py  services.py  test_services.py  tests.py  views.py
ynvo/migrations/: 0001_initial.py  0002_auto_20190303_0135.py  0003_auto_20190304_1625.py  0004_invoice_project.py  0005_auto_20190402_0729.py  0006_auto_20190712_0519.py  0007_invoice_note.py  0008_invoice_proforma.py  0009_auto_20191128_1953.py  0010_client_transmitter.py  0011_project_task_work_comment.py  0012_fee_invoice.py  0013_remove_invoice_fees_alter_fee_invoice.py  0014_task_created_task_deadline_task_priority.py  0015_task_status_alter_task_branch_alter_task_description.py  0016_remove_comment_date_comment_created.py  0017_alter_client_id_alter_comment_id_alter_fee_amount_and_more.py  0018_invoice_invoice_record.py  0019_client_default_activity_client_discount_description_and_more.py
ynvo/static/ynvo/css/: style.css
ynvo/templates/ynvo/: ynvo.html
