[project]
name = "invoices"
version = "0.1.0"
description = "Invoice management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2,<6",
    "django-mathfilters>=0.4,<1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "factory-boy",
    "ruff",
    "mypy",
    "django-stubs[compatible-mypy]",
    "import-linter",
    "django-debug-toolbar",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "invoices.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "invoices.settings"
pythonpath = ["."]
python_files = [
    "**/test_*.py",
    "**/*_test*.py",
    "**/tests.py",
    "**/tests_*.py",
]

[tool.importlinter]
root_packages = ["ynvo", "verifactu"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "models must not import from services or views"
type = "forbidden"
source_modules = ["ynvo.models"]
forbidden_modules = ["ynvo.services", "ynvo.views", "ynvo.admin"]

[[tool.importlinter.contracts]]
name = "managers must not import from services, views or admin"
type = "forbidden"
source_modules = ["ynvo.managers"]
forbidden_modules = ["ynvo.services", "ynvo.views", "ynvo.admin"]

[[tool.importlinter.contracts]]
name = "views must not import from admin"
type = "forbidden"
source_modules = ["ynvo.views"]
forbidden_modules = ["ynvo.admin"]
